consistent style in inference

--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -491,7 +491,7 @@ reliable&mdash;is there any way to improve the estimate?  One way to improve a
 point estimate is to take a *larger* sample. To illustrate what effect this
 has, we will take many samples of size 20, 50, 100, and 500, and plot the
 sampling distribution of the sample mean. We indicate the mean of the sampling
-distribution with a red vertical line.
+distribution with a vertical dashed line.
 
 ```{r 11-example-means6, echo = FALSE, message = FALSE, warning = FALSE}
 ## Sampling n = 20, 50, 100, 500
@@ -542,9 +542,9 @@ sampling_distribution_500 <- ggplot(sample_estimates_500, aes(x = mean_price)) +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 ```
 
-```{r 11-example-means7,  echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of sampling distributions, with mean highlighted as a vertical red line."}
+```{r 11-example-means7,  echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of sampling distributions, with mean highlighted as a vertical dashed line."}
 annotated_sampling_dist_20 <- sampling_distribution_20 +
-  geom_vline(xintercept = mean(sample_estimates$mean_price), col = "red") +
+  geom_vline(xintercept = mean(sample_estimates$mean_price), linetype = "dashed", linewidth = 1, color = "darkorange") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20)) +
   ggtitle("n = 20") +
   annotate("text",
@@ -559,7 +559,7 @@ annotated_sampling_dist_20 <- sampling_distribution_20 +
 #               label = paste("sd = ", round(sd(sample_estimates$mean_price), 1)))
 
 annotated_sampling_dist_50 <- sampling_distribution_50 +
-  geom_vline(xintercept = mean(sample_estimates_50$mean_price), col = "red") +
+  geom_vline(xintercept = mean(sample_estimates_50$mean_price), linetype = "dashed", linewidth = 1, color = "darkorange") +
   ## x limits set the same as n = 20 graph, y is this graph
   annotate("text",
     x = max_x(sampling_distribution_20),
@@ -572,7 +572,7 @@ annotated_sampling_dist_50 <- sampling_distribution_50 +
 #                 label = paste("sd = ", round(sd(sample_estimates_50$mean_price), 1)))
 
 annotated_sampling_dist_100 <- sampling_distribution_100 +
-  geom_vline(xintercept = mean(sample_estimates_100$mean_price), col = "red") +
+  geom_vline(xintercept = mean(sample_estimates_100$mean_price), linetype = "dashed", linewidth = 1, color = "darkorange") +
   annotate("text",
     x = max_x(sampling_distribution_20),
     y = max_count(sampling_distribution_100),
@@ -584,7 +584,7 @@ annotated_sampling_dist_100 <- sampling_distribution_100 +
 #               label = paste("sd = ", round(sd(sample_estimates_100$mean_price), 1)))
 
 annotated_sampling_dist_500 <- sampling_distribution_500 +
-  geom_vline(xintercept = mean(sample_estimates_500$mean_price), col = "red") +
+  geom_vline(xintercept = mean(sample_estimates_500$mean_price), linetype = "dashed", linewidth = 1, color = "darkorange") +
   annotate("text",
     x = max_x(sampling_distribution_20),
     y = max_count(sampling_distribution_500),
@@ -904,7 +904,7 @@ sampling_dist <- ggplot(sample_estimates, aes(x = mean_price)) +
 
 annotated_sampling_dist <- sampling_dist +
   xlim(min_x(sampling_dist), max_x(sampling_dist)) +
-  geom_vline(xintercept = mean(sample_estimates$mean_price), col = "red") +
+  geom_vline(xintercept = mean(sample_estimates$mean_price), linetype = "dashed", linewidth = 1, color = "darkorange") +
   annotate("text",
     x = max_x(sampling_dist), y = max_count(sampling_dist),
     hjust = 1,
@@ -915,7 +915,7 @@ boot_est_dist_limits <- boot_est_dist +
     xlim(min_x(sampling_dist), max_x(sampling_dist))
 
 annotated_boot_est_dist <- boot_est_dist_limits +
-  geom_vline(xintercept = mean(boot20000_means$mean_price), col = "red") +
+  geom_vline(xintercept = mean(boot20000_means$mean_price), linetype = "dashed", linewidth = 1, color = "darkorange") +
   annotate("text",
     x = max_x(sampling_dist), y = max_count(boot_est_dist_limits),
     vjust = 1,
@@ -1137,7 +1137,7 @@ visualize the interval on our distribution in Figure
 
 ```{r 11-bootstrapping9, echo = F, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means with percentile lower and upper bounds.", fig.height=4, fig.width = 6.5}
 boot_est_dist +
-  geom_vline(xintercept = bounds, col = "#E69F00", size = 2, linetype = 2) +
+  geom_vline(xintercept = bounds, col = "darkorange", linetype = "dashed", linewidth = 1) +
   annotate("text",
     x = bounds[1], max_count(boot_est_dist), hjust = 0.6, vjust = 2,
     label = paste("2.5th percentile =", round(bounds[1], 2))
